Fixed z-index error and left resizer

--- a/src/main/webapp/css/searchbar.css
+++ b/src/main/webapp/css/searchbar.css
@@ -7,7 +7,7 @@
   height: 5vh;
   padding-left: 0vw;
 	margin-bottom: 0vh;
-	z-index: 999999;
+	z-index: 2;
 }
 
 .top_list li {
