--- a/src/main/webapp/css/sidebar.css
+++ b/src/main/webapp/css/sidebar.css
@@ -24,11 +24,12 @@
 }
 
 #sidebar-resizer {
-	background-color: red;
+	background-color: transparent;
   position: absolute;
-  height: 10vh;
   top: 0vh;
   left: 8vw;
+  bottom: 8vh;
   width: 0.4vw;
   cursor: e-resize;
+  z-index: 1;
 }
